package Decorator.B2;

import java.util.List;

public interface Tokenize {
    List<String> tokenize();
}
