@startuml
'https://plantuml.com/class-diagram

interface Tokenize{
        + List<String> tokenize();
}
class TachTu{
        String s;
}
class TokenizeDecorator{
        # Tokenize token;
}
abstract class TokenizeDecorator
Tokenize <|.. TachTu
Tokenize <|.. TokenizeDecorator
TokenizeDecorator <|-- LoaiBoTuDung
TokenizeDecorator <|-- LoaiBoDauCau
TokenizeDecorator --> Tokenize: Token
@enduml